<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.djzmo.popularmovies.MovieDetailActivity">

    <ScrollView
        android:id="@+id/sv_detail_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/detail_padding_wide"
                android:paddingBottom="@dimen/detail_padding_wide"
                android:paddingLeft="@dimen/detail_container_padding"
                android:paddingStart="@dimen/detail_container_padding"
                android:paddingRight="@dimen/detail_container_padding"
                android:paddingEnd="@dimen/detail_container_padding"
                android:background="@color/teal500">
                <TextView
                    android:id="@+id/tv_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/heading_large_size"
                    android:textColor="@android:color/white"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/detail_padding_narrow"
                android:paddingBottom="@dimen/detail_padding_narrow"
                android:paddingLeft="@dimen/detail_container_padding"
                android:paddingRight="@dimen/detail_container_padding">
                <ImageView
                    android:id="@+id/iv_detail_thumbnail"
                    android:layout_width="@dimen/detail_thumbnail_width"
                    android:layout_height="@dimen/detail_thumbnail_height"
                    android:layout_marginRight="@dimen/detail_thumbnail_margin"
                    android:layout_marginEnd="@dimen/detail_thumbnail_margin"
                    android:contentDescription="@string/thumbnail_image"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />
                <TextView
                    android:id="@+id/tv_detail_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/heading_sub_large_size"
                    android:layout_marginTop="@dimen/detail_container_margin"
                    android:layout_marginBottom="@dimen/detail_container_margin"
                    android:layout_toEndOf="@id/iv_detail_thumbnail"
                    android:layout_toRightOf="@id/iv_detail_thumbnail" />
                <TextView
                    android:id="@+id/tv_detail_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/heading_sub_large_size"
                    android:textStyle="bold|italic"
                    android:layout_marginTop="@dimen/detail_container_margin"
                    android:layout_marginBottom="@dimen/detail_container_margin"
                    android:layout_toEndOf="@id/iv_detail_thumbnail"
                    android:layout_toRightOf="@id/iv_detail_thumbnail"
                    android:layout_below="@id/tv_detail_year" />
                <TextView
                    android:id="@+id/tv_detail_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/heading_sub_small_size"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="@dimen/detail_container_margin"
                    android:layout_marginBottom="@dimen/detail_container_margin"
                    android:layout_toEndOf="@id/iv_detail_thumbnail"
                    android:layout_toRightOf="@id/iv_detail_thumbnail"
                    android:layout_below="@id/tv_detail_duration" />
                <ImageButton
                    android:id="@+id/btn_mark_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border_black_48dp"
                    android:background="@null"
                    android:layout_toEndOf="@id/iv_detail_thumbnail"
                    android:layout_toRightOf="@id/iv_detail_thumbnail"
                    android:layout_below="@id/tv_detail_rating"
                    android:onClick="markAsFavorite"
                    android:textAllCaps="true" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_detail_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/heading_sub_medium_size"
                android:layout_marginTop="@dimen/detail_container_margin"
                android:layout_marginBottom="@dimen/detail_container_margin"
                android:paddingLeft="@dimen/detail_container_padding"
                android:paddingRight="@dimen/detail_container_padding" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_separator_height"
                android:layout_marginStart="@dimen/detail_separator_margin"
                android:layout_marginLeft="@dimen/detail_separator_margin"
                android:layout_marginEnd="@dimen/detail_separator_margin"
                android:layout_marginRight="@dimen/detail_separator_margin"
                android:background="@android:color/darker_gray"
                />

            <TextView
                android:id="@+id/tv_trailer_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers_colon"
                android:textSize="@dimen/heading_medium_size"
                android:layout_marginTop="@dimen/detail_container_margin"
                android:layout_marginBottom="@dimen/detail_container_margin"
                android:paddingLeft="@dimen/detail_container_padding"
                android:paddingRight="@dimen/detail_container_padding" />

            <LinearLayout
                android:id="@+id/ll_trailers_container"
                android:layout_marginTop="@dimen/detail_container_margin"
                android:layout_marginBottom="@dimen/detail_container_margin"
                android:paddingLeft="@dimen/detail_container_padding"
                android:paddingRight="@dimen/detail_container_padding"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </LinearLayout>

            <TextView
                android:id="@+id/tv_review_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews_colon"
                android:textSize="@dimen/heading_medium_size"
                android:layout_marginTop="@dimen/detail_container_margin"
                android:layout_marginBottom="@dimen/detail_container_margin"
                android:paddingLeft="@dimen/detail_container_padding"
                android:paddingRight="@dimen/detail_container_padding" />

            <LinearLayout
                android:id="@+id/ll_reviews_container"
                android:layout_marginTop="@dimen/detail_container_margin"
                android:layout_marginBottom="@dimen/detail_container_margin"
                android:paddingLeft="@dimen/detail_container_padding"
                android:paddingRight="@dimen/detail_container_padding"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_gravity="center_vertical|center_horizontal" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal">
        <TextView
            android:id="@+id/tv_detail_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/error_text_size"
            android:text="@string/error_message"
            android:visibility="invisible" />
        <Button
            android:id="@+id/btn_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_detail_error"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/error_button_top_margin"
            android:visibility="invisible"
            android:text="@string/try_again" />
    </RelativeLayout>

</FrameLayout>
